[package]
name = "dimmer-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0.10", features = ["use-crc"] }
clap = { version = "3.1.6", features = ["derive"] }
dimmer-communication = { path = "../dimmer-communication" }
crc = "3.2.1"
tokio = { version =  "1", features = ["full"] }
warp = "0.3"
log = "0.4"
env_logger = "0.11.5"
futures = "0.3.31"