[package]
name = "dimmer-g431"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
panic-probe = { version = "0.3" }
log = "0.4.22"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5"
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
fugit = "0.3"
embedded-alloc = "0.5"
embedded-hal = "0.2"
embedded-dma = "0.1.2"
itoa = "1.0.11"
postcard = { version = "1.0.10", features = ["use-crc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
dimmer-communication = { path = "../../dimmer-communication" }
crc = "3.2.1"

[dependencies.stm32g4xx-hal]
path = "../../../HALs/stm32g4xx-hal"
features = ["stm32g431","log-rtt", "rt"]
rtic-time = { version = "2.0", optional = true }


[dev-dependencies]
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5"
panic-probe = { version = "0.3.0" }
panic-semihosting = "0.6"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4.11"
cortex-m-log = { version = "0.7", features = ["log-integration"] }
cfg-if = "0.1.10"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }